Correct z-index to make swipe zone operational

--- a/client/src/components/HOC/withVis/vis.scss
+++ b/client/src/components/HOC/withVis/vis.scss
@@ -26,12 +26,11 @@ g.nodes {
   pointer-events: none;
 }
 
-.controls-svg {
-  pointer-events: none;
-  width: 72vw;
+.controls-div {
   height: 15vh;
   background-color: #dddddd;
   opacity: 0.4;
+  z-index: 9;
 }
 
 .swipe-zone {
@@ -50,22 +49,17 @@ g.tooltip rect {
   stroke-width: 1px;
 }
 
-g.tooltip text,
-.controlsSvg text {
+g.tooltip text {
   fill: #1a140e !important;
   stroke: #1a140e !important;
   stroke-width: 1px;
 }
 
 body[class^="scroll"] .legend-svg,
-body[class^="scroll"] .controls-svg {
+body[class^="scroll"] .controls-div {
   opacity: 0;
   visibility: none;
   transition: opacity 0.2s ease-out;
-}
-
-.controlsSvg text {
-  text-anchor: end;
 }
 
 .habit-label-dash-button text {
@@ -81,11 +75,4 @@ body[class^="scroll"] .controls-svg {
 
 g.tooltip rect:first-of-type {
   fill: #47301f !important;
-}
-
-@media only screen and (min-width: 760px) {
-  .controlsSvg {
-    width: 350px;
-    right: 0;
-  }
 }
